--- a/nextereact/base/package.json
+++ b/nextereact/base/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "base",
-  "version": "0.2.0",
+  "name": "nextereact",
+  "version": "0.2.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "css": "^3.0.0",
+    "html": "^1.0.0",
+    "html5": "^1.0.0",
     "loader": "^2.1.1",
     "next": "^12.2.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "server": "^1.0.37",
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
